--- a/_posts/0000-01-02-xkerya.md
+++ b/_posts/0000-01-02-xkerya.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to xkerya' slide"
 ---
 This is GitHub xkeryaxx slide
 Use the left arrow to go back!
