Make line 5 more awesome

--- a/_posts/0000-01-02-xkerya.md
+++ b/_posts/0000-01-02-xkerya.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to xkerya' slide"
 ---
-This is Xkeryaxx' slide
+This is Xkeryaxx' slide 🎉
 Use the left arrow to go back!
